fixed offcenter error message bug

--- a/sinatra-react-project-client/src/css/RecipeForm.css
+++ b/sinatra-react-project-client/src/css/RecipeForm.css
@@ -280,6 +280,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 8%;
   top: 0;
   overflow: hidden;
@@ -288,6 +289,4 @@
 #form__error p {
   font-family: Arial, Helvetica, sans-serif;
   color: red;
-  transform: translatey(-1000px);
-  animation: slideDown .4s ease-in-out forwards .2s;
 }
